--- a/introduction/menu.html
+++ b/introduction/menu.html
@@ -32,7 +32,8 @@
     -->     
         <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="/../">
-                <img src="Return_Arrow.png" height = "10" width = "10">
+                <img src="Return_Arrow.png" height = "15" width = "15">
+                Back
             </a>  
         </li>
         </ul>
